--- a/scss/component/_magic-chart.scss
+++ b/scss/component/_magic-chart.scss
@@ -162,6 +162,10 @@
     .mg-chart__spacer {
       flex: 1;
     }
+    // 순환 체크박스+라벨은 영역 내 우측 정렬.
+    .mg-chart__wrap {
+      justify-content: flex-end;
+    }
     // 혼의특기 input(.mg-field__value 는 식별그리드용 line-height:1.4)을 라벨·드롭다운과
     // 같은 line-height 로 맞춰 세로 정렬을 통일한다.
     .mg-field__value {
